# pympc

./: .pre-commit-config.yaml  CHANGES.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
notebooks/: README.md  minor_planet_center_results_current.txt  minor_planet_center_results_geo.txt  minor_planet_center_results_plus1month.txt  minor_planet_center_results_plus3month.txt  minor_planet_center_results_plus6month.txt  minor_planet_center_results_topo.txt  position_accuracy.ipynb  position_accuracy_asteroids.ipynb  position_accuracy_neas.ipynb  topocentric_corrections.ipynb
pympc/: __init__.py  cli.py  pympc.py  utils.py
pympc/data/: README.md  obs_codes.npy
scripts/: README.md  benchmark.py  generate_cli_demo.py  generate_cli_demos.py  profile.py
test/: test_pympc.py
test/resources/: mpcorb_xephem_expected.csv  mpcorb_xephem_head.csv  mpcorb_xephem_test.json
